--- a/product/product.html
+++ b/product/product.html
@@ -11,7 +11,55 @@
 
             <section class="card">
                 <div class="card-img">
-                    <img src="" alt="">
+                    <img src="../assets/images/download (3).jpg" alt="Some food images ...">
+                </div>
+                <div class="card-body">
+                    <h3>
+                        Tajine
+                    </h3>
+                    <p>
+                        a kind of stew cooked in a stew that can be a mixture of meat, poultry or fish, vegetables or fruit and spices and olive oil
+                    </p>
+                    <h1>
+                        <span>
+                            $
+                        </span>
+                        14
+                    </h1>
+                </div>
+                <div class="card-footer">
+                    <button>
+                        Buy
+                    </button>
+                </div>
+            </section>
+            <section class="card">
+                <div class="card-img">
+                    <img src="../assets/images/download (4).jpg" alt="Some food images ...">
+                </div>
+                <div class="card-body">
+                    <h3>
+                        Burger
+                    </h3>
+                    <p>
+                        a patty of ground beef grilled and placed between two halves of a bun. Slices of raw onion, lettuce, bacon, mayonnaise, and other ingredients add flavor. 
+                    </p>
+                    <h1>
+                        <span>
+                            $
+                        </span>
+                        10
+                    </h1>
+                </div>
+                <div class="card-footer">
+                    <button>
+                        Buy
+                    </button>
+                </div>
+            </section>
+            <section class="card">
+                <div class="card-img">
+                    <img src="../assets/images/download.jpg" alt="Some food images ...">
                 </div>
                 <div class="card-body">
                     <h3>
@@ -30,7 +78,7 @@
             </section>
             <section class="card">
                 <div class="card-img">
-                    <img src="" alt="">
+                    <img src="../assets/images/images (6).jpg" alt="Some food images ...">
                 </div>
                 <div class="card-body">
                     <h3>
@@ -49,7 +97,7 @@
             </section>
             <section class="card">
                 <div class="card-img">
-                    <img src="" alt="">
+                    <img src="../assets/images/images (10).jpg" alt="Some food images ...">
                 </div>
                 <div class="card-body">
                     <h3>
@@ -68,45 +116,7 @@
             </section>
             <section class="card">
                 <div class="card-img">
-                    <img src="" alt="">
-                </div>
-                <div class="card-body">
-                    <h3>
-
-                    </h3>
-                    <p>
-
-                    </p>
-                    <h1>
-                        <span>
-                            $
-                        </span>
-
-                    </h1>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-img">
-                    <img src="" alt="">
-                </div>
-                <div class="card-body">
-                    <h3>
-
-                    </h3>
-                    <p>
-
-                    </p>
-                    <h1>
-                        <span>
-                            $
-                        </span>
-
-                    </h1>
-                </div>
-            </section>
-            <section class="card">
-                <div class="card-img">
-                    <img src="" alt="">
+                    <img src="../assets/images/images (5).jpg" alt="Some food images ...">
                 </div>
                 <div class="card-body">
                     <h3>
