Finishing The Main Section and making it responsive !

--- a/product/product.html
+++ b/product/product.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="product.css">
         <title>products</title>
     </head>
-    <body>
+    <body style="background-color: rgba(255, 217, 171, 0.525)">
         
         <main>
 
@@ -63,17 +64,20 @@
                 </div>
                 <div class="card-body">
                     <h3>
-
+                        Pizza
                     </h3>
                     <p>
-
+                        open-faced baked pie of Italian origin, consisting of a thin layer of bread dough topped with spiced tomato sauce and cheese, often garnished with anchovies, sausage slices
                     </p>
                     <h1>
                         <span>
                             $
                         </span>
-
+                        12
                     </h1>
+                </div>
+                <div class="card-footer">
+                    <button>Buy</button>
                 </div>
             </section>
             <section class="card">
@@ -82,17 +86,20 @@
                 </div>
                 <div class="card-body">
                     <h3>
-
+                        Fried Chicken
                     </h3>
                     <p>
-
+                        dish consisting of chicken pieces that have been coated with seasoned flour or batter and pan-fried, deep fried, pressure fried, or air fried.
                     </p>
                     <h1>
                         <span>
                             $
                         </span>
-
+                        10
                     </h1>
+                </div>
+                <div class="card-footer">
+                    <button>Buy</button>
                 </div>
             </section>
             <section class="card">
@@ -101,17 +108,20 @@
                 </div>
                 <div class="card-body">
                     <h3>
-
+                        Tacos
                     </h3>
                     <p>
-
+                        popular hand-sized food item of Mexican origin combining seasoned meat, vegetables, and other fillings and served inside a folded or rolled corn or flour tortilla.
                     </p>
                     <h1>
                         <span>
                             $
                         </span>
-
+                        13
                     </h1>
+                </div>
+                <div class="card-footer">
+                    <button>Buy</button>
                 </div>
             </section>
             <section class="card">
@@ -120,17 +130,20 @@
                 </div>
                 <div class="card-body">
                     <h3>
-
+                        Chicken Burger
                     </h3>
                     <p>
-
+                        Crispy seasoned chicken breast, topped with mandatory melted cheese, piled onto soft rolls with onion, avocado, lettuce, tomato and garlic mayo.
                     </p>
                     <h1>
                         <span>
                             $
                         </span>
-
+                        15
                     </h1>
+                </div>
+                <div class="card-footer">
+                    <button>Buy</button>
                 </div>
             </section>
 
